<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".ThankYouActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical">


        <ImageView
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_only"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/received_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/click_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnHome"
                android:text="@string/home"
                android:background="@drawable/buttons"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/end_start"
                android:layout_marginEnd="@dimen/end_start"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnExit"
                android:text="@string/exit"
                android:background="@drawable/buttons"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/end_start"
                android:layout_marginEnd="@dimen/end_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
