<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".ResetPasswordActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/iv_size"
            android:layout_height="@dimen/iv_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_only"/>
        <EditText
            android:gravity="center_horizontal"
            android:id="@+id/etEmail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:gravity="center_horizontal"
            android:id="@+id/btnReset"
            android:background="@drawable/buttons"
            android:layout_marginStart="@dimen/end_start"
            android:layout_marginEnd="@dimen/end_start"
            android:text="@string/reset_password"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</LinearLayout>
